<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:background="@color/colorAccentLight"
android:id="@+id/S2Layout"
tools:context=".Scene2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivRubyArrive"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/ruby_sleeping"
            app:srcCompat="@drawable/ruby_stand" />

        <ImageView
            android:id="@+id/ivTechBro"
            android:layout_width="0dp"
            android:layout_height="221dp"
            android:layout_weight="1"
            android:contentDescription="@string/tech_bro"
            app:srcCompat="@drawable/techbro2" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/even_though_you_re_anxious_about_your_first_day_you_show_up_unfortunately_your_first_encounter_is_not_a_positive_one"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/diversity_hire"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:typeface="monospace"/>

    <Button
        android:id="@+id/btnSmile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/brush_it_off_with_a_smile_he_doesn_t_mean_anything_by_it"
        android:textColor="@color/colorAccentLight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnAssert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/introduce_yourself_as_the_new_software_engineering_intern"
        android:textColor="@color/colorAccentLight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />
</LinearLayout>