<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentLight"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/myGOLayout"
    tools:context=".GameOver">

    <ImageView
        android:id="@+id/ivRubySad"
        android:layout_width="match_parent"
        android:layout_height="342dp"
        android:contentDescription="@string/sad_ruby"
        app:srcCompat="@drawable/ruby_sad" />

    <TextView
        android:id="@+id/tvGameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:text="@string/imposter_syndrome_got_the_best_of_you_holding_you_back_from_an_amazing_summer_of_learning_and_building_a_string_network_with_other_amazing_women_and_rolemodels_in_the_technology_industry"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnReadMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/find_out_more_about_imposter_syndrome"
        android:textColor="@color/colorAccentLight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnRestart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/play_again"
        android:textColor="@color/colorAccentLight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />

</LinearLayout>