<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccentLight"
    android:id="@+id/myIntroLayout"
    tools:context=".Introduction">

    <ImageView
        android:id="@+id/ivRubySleep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/ruby_sleeping"
        app:srcCompat="@drawable/ruby_sleep" />

    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/ruby_it_s_your_first_day_at_your_software_engineering_internship_wake_up"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnStay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/they_made_a_mistake_i_m_not_good_enough_i_ll_try_again_next_year"
        android:textColor="@color/colorAccentLight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnGetUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/i_m_really_nervous_but_no_intern_knows_everything_their_first_day_let_s_do_this"
        android:textColor="@color/colorAccentLight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />
</LinearLayout>