<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/tbdLayout"
    tools:context=".ToBeContinued"
    android:background="@color/colorAccentLight">

    <ImageView
        android:id="@+id/ivRubyVictory"
        android:layout_width="wrap_content"
        android:layout_height="305dp"
        android:contentDescription="@string/victorious_ruby"
        app:srcCompat="@drawable/ruby_triumph"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/tv_TBD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:text="@string/tbd"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="start"
        android:padding="5dp"
        android:text="@string/play_again"
        android:textColor="@color/colorAccentLight"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />
</LinearLayout>